send favourite status with asset in diversification (#64)
